<resources>
    <string name="app_name">RollinBass</string>
    <string name="logo_description">Logotipo Principal RollinBass</string>
    <string name="mail">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Login</string>
    <string name="new_acc">"Aún no estás registrado? Crea una nueva cuenta. "</string>
    <string name="user">Nombre de usuario</string>
    <string name="nombre">Nombre completo</string>
    <string name="fecha_nacimiento">Introduce tu fecha de nac</string>
    <string name="register">Regístrate</string>
    <string name="promotora">Promotora</string>
    <string name="djs">Djs</string>
    <string name="test">test</string>
    <string name="eventos">Eventos</string>
    <string name="rollin_history">Roll in Bass es una realidad que nace de la ilusión de una familia.🙂\n\nCada uno de nosotros ha crecido de la mano de la música drum and bass, break y dubstep. Enamorados de los ritmos rotos, sus latidos y sus BPM. Cuando hablamos de equipo, hablamos de grupo,y cuando se habla de grupo entran en juego ilusiones, metas y objetivos.\nUna familia.❤❤\n\nSe dice que cuando una persona es tenaz y tiene un objetivo de una forma u otra lo alcanzará, tarde o temprano, fruto del trabajo. Ahora queremos alcanzar ese objetivo entre todos nosotros.\nBuscamos compartir con todo el mundo nuestra visión y los BPM a los que latimos, a todo el volumen que podamos.\nNos acompañarán artistas locales, de la tierra, jóvenes y con denominación de origen. Tanto nacionales como internacionales, aportando novedad y frescura a la escena, impulsándola de la mano de todos estos artistas.🎧🎵\n\nNOS VEMOS DELANTE DEL SOUNDSYSTEM🔥🙌🔥🙌!!\n\n\n\nConéctate a la #RollinPeople en nuestras redes:</string>
    <string name="logos">Logos</string>
    <string name="foto_familia">Foto familia</string>
    <string name="eventos_problem">COMUNICADO SUSPENSIÓN TEMPORAL DE EVENTOS:\n\n\nDebido a la actual situación sanitaria y a las medidas tomadas en las salas de fiestas y eventos por las distintas administraciones para evitar la expansión del virus, comunicamos la suspensión de eventos hasta que mejore la situación y podamos ofrecer un servicio acorde al nivel que queremos dar.\n\nDesde aquí os mandamos fuerza y ánimo para sobrellevar estos tiempos tan complicados.❤ 🎧 </string>
    <string name="intro_logos">Hola Familia!🎉🙌🔥🔥\n\nEn este apartado queríamos explicaros un poquito el porqué de todo esto:</string>
    <string name="texto_bellota">Por qué nuestra bellotilla?🌰\nRepresenta el nacimiento de un proyecto, una ilusión. Un camino por recorrer…</string>
    <string name="logo_bellota">logo bellota</string>
    <string name="logo_abubilla">logo abubilla</string>
    <string name="texto_abubilla">Por qué nuestra abubilla?🐦\nEs una extensión de nosotros. Nuestra conexión con la naturaleza y consciencia animal. Nuestra parte salvaje y a la vez responsable.</string>
    <string name="texto_encina">Por qué nuestra encina?🌳\nEs la familia, son las raíces y nuestra seña de identidad. Fotosíntesis perfecta entre nuestro sueño y nuestra RollinPeople.</string>
    <string name="logo_encina">logo encina</string>
    <string name="pie_logos">Esto no hubiera sido posible sin nuestros diseñadores @gloevolutionsoccer y @drty.dsgn.\nGracias por darle vida y color a todas nuestras locuras.\n\nUn millón de gracias por darnos vida!\n\n#RollinPeople</string>
    <string name="ig_rollinBass">\@rollinbass</string>
    <string name="ig_gloevolutionsoccer">\@gloevolutionsoccer</string>
    <string name="ig_drty.dsgn">\@drty.dsgn</string>
    <string name="nombre_artista_hint">Nombre Artista</string>
    <string name="alias">Alias</string>
    <string name="genero_musical">Género Musical</string>
    <string name="descripcion_dj">Descripción del Dj</string>
    <string name="identidad">Identidad</string>
    <string name="video_pausado">Vídeo en pause.</string>
    <string name="reproducciendo">Reproduciendo vídeo</string>
    <string name="bienvenida">Bienvenido a la RollinPage</string>
    <string name="info_video">Pulsa en el vídeo para reproducir</string>
    <string name="generos_musicales">Géneros musicales</string>
    <string name="biografia">Biografía</string>
    <string name="registro_exito">Registro realizado con éxito</string>
    <string name="artistas">Artistas</string>
    <string name="acorn_des">ACORN\n\nHablamos de un Joven madrileño de 24 años con residencia en Málaga.\n\nSu primer contacto con la música electrónica fue en 2012 con el Breakbeat y sus ritmos rotos pero no fue hasta 2015 cuando despertó su pasión por el D&amp;B y los latidos del Neurofunk.De la mano de su madurez musical empezó a tener contacto con el Deep, Roller, Techstep. Sus sonidoscontundentes, oscuros y atmosféricos lo llevó a enamorarse de estos estilos, viéndose reflejado en el resultado de sus sets.\n\nEl debut de este artista fue en Octubre del 2018, y su pequeño recorrido ha pasado por la conocida Paris15y la familiar Route69. En su camino, ha compartido cabina con artistas de talla internacional cómo sonTeddy Killerz y Dub Elements</string>
    <string name="bl4ko_des">BL4KO\n\nDj cordobés, cofundador de Roll in Bass que actualmente reside en Leeds(UK).\n\nDesde joven se ha visto influido por el movimiento DnB, tanto a nivel nacional como internacional. Sus principales influencias fueron el Neurofunk y Jump Up y con el paso tiempo fue sumergiéndose en subgéneros tales como el Deep, Tech-Step, Rollers o Liquid , los cuales quedan reflejados en sus mezclas.\n\nFue en 2017 cuando decidió adentrarse en este mundo, empezando a mezclar en casa por hobby y pinchando en fiestas privadas. Poco a poco, se fue convirtiendo en una realidad y en septiembre de 2019 tuvo la oportunidad de actuar en la sala The Old Red Bus Station (Leeds), por la cual han pasado grandes artistas del panorama inglés.\nAhora vuelve a España con ganas de mostrar todo lo aprendido y hacer de ello algo aún más grande.</string>
    <string name="blnk_des">BLNK\n\nEste joven DJ de la Sierra de Cádiz, es un apasionado de las baterías duras y los ritmos rápidos. Su estilo abarca subgéneros del Drum &amp; Bass como el Techstep, Deep, Neuro y con un toque de roller. Sus sets siempre vienen acompañados con vocales de reggae, jazz, rap, etc…\n\nHa actuado en varias raves y salas de Andalucía, en Cádiz en Sala Holiday, Sala Pokoloco, Sala La Comedia (Jerez), en Sevilla en Sala Prisma y en Córdoba en Sala M100; además de compartir cabina con artistas de la talla de Dub Elements.</string>
    <string name="coolbox_des">COOLBOX\n\nSe trata de uno de los benjamines de la familia.\nSu pasión por el D&amp;B comienza desde una joven edad, en la que la influencia de sus padres y la escena rave hacen que quiera formar parte de este mundo desde bien pequeño.\nSiendo acogido con los brazos abiertos por parte del conocido colectivo Alharave, comienza a compartir su música en varios eventos, salas, y festivales de las provincias de Málaga, Sevilla y Granada como: Industrial Copera, París15, El Tren, Palladium, Prisma, Cosmos, Sala Route 69, Quilombo, Zona Roja, etc.\n\nA lo largo de su recorrido ha compartido cabina con grandes Djs de renombre dentro del género como DLR, Gerra &amp; Stone, Ill Truth, Data 3, Philth, LSB, Document One, Dj Limited, Levela, Black Barrel…\n\nSu visión del D&amp;B la traslada a sus sets, siempre cargados de los sonidos más frescos y underground de lamano del Rolling Deep, Jump up Rollers, Deep Rollers &amp; Jungle consiguiendo un resultado exquisito.También colabora con otros colectivos cómo son Zero2 Soul Collective y Alharave promoviendo la escena y su gusto por la música.</string>
    <string name="elux_des">ELUX\n\nJoven malagueño que se inició en el mundillo de la música electrónica en el año 2010 y sus ritmos rotos. Fue entonces allá por el 2014 cuando entró en contacto con el D&amp;B gracias a los clubes y eventos Rave de toda Andalucía.\n\nAlcanzando su madurez musical, comienza a elaborar sus primeras mezclas justo en el 2019 bajo el nombre artístico ELUX, y que pese a su breve experiencia en el mixing, contiene una gran selección y cultura D&amp;B. Una temática Roller, fuertemente marcada por una línea de bajos oscura y baterías contundentes, junto al toque atmósferico de su selección, caracteriza y da una identidad única al artista.\n\nEn cuanto a su camino, ha tenido la suerte de poder llevar su música a la conocida Sala Prisma de Sevilla y varios clubes y eventos Rave en Málaga y Granada.</string>
    <string name="gunpowder_des">GUNPOWDER\n\nCuando hablamos de Gunpowder hablamos de un joven que empezó en el mundo del D&amp;B en el año 2016, dónde comenzó a asistir varios eventos, salas y festivales. Nació su amor por las líneas más oscuras y profundas descubriéndolas en la escena underground.\n\nFue en Verano de 2019 cuando ven la luz sus primeras mezclas en reproductores cdj y dónde avanza a ritmos agigantados gracias a la ayuda de su entorno más cercano. Ahora sí es cuando se marcará la tendencia de sus sesiones, mostrando su pasión por Rollers y Deep dentro del D&amp;B, fuertemente caracterizados en sus mezclas dónde predominan mezclas largas, acompañadas de double-drops y una línea seria y contundente.\n\nEn cuanto a su experiencia, ha actuado en varios eventos y festivales de la provincia de Málaga, Granada, y en conocidas salas como es Sala Prisma en Sevilla. Gunpowder también colabora con otros colectivos como el conocido Alharave, muy querido por muchos de nosotros.</string>
    <string name="minimaldrama_des">MINIMAL DRAMA\n\nEste artista cordobés, miembro de Roll in Bass y uno de sus cofundadores, comienza a mostrarse interesado en D&amp;B a raíz de su continuo contacto con la escena andaluza de los años 2015 y posteriormente por el panorama underground británico, donde estuvo residiendo una larga temporada.\n\nEmpezó dar sus primeros pasos en el mundo del mixing en varias fiestas privadas en UK, dónde mantiene un estrecho contacto con el D&amp;B británico. Su estilo, dónde le gusta jugar entre los 172–175 bpm, está claramente marcado por el Deep Minimal, Liquid, Tech Step, Rolling y Neurofunk, buscando una atmósfera dinámica y envolvente acompañada de unos bajos contundentes, consiguiendo un resultado muy personal.</string>
    <string name="setelilak_des">SETE &amp; LILAK\n\nSon un dúo de jóvenes DJs sevillanos que además son hermanos casi idénticos, lo que influye en la coordinación y la armonización de las habilidades de ambos, creando un juego de ritmos, cortes y estilos único.\n\nEn los últimos años han cautivado los oídos de los amantes del neurofunk de su ciudad con sus sets desenfrenados e imparables. En la cabina hacen un verdadero viaje sobre los subgéneros del drum and bass, desde el neurofunk más demoledor, pasando por el más oscuro deep e incluso algún rompepistas melódico, sin olvidar los desencajantes tracks de jump-up.</string>
    <string name="usuario">Usuario</string>
    <string name="incluir_sugerencia">"Escribe aquí la sugerencia."</string>
    <string name="enviar">Enviar</string>
    <string name="titulo">Título</string>
</resources>